Initial support for reading TES4 and TES5 files.
- Focused on being able to load Skywind navmesh records.
- Trying to allow co-existing with TES3 resulted in some compromises.  May need to revisit this, the longer term idea is to make this a stand-alone library or tool.
- Partially merged pathgrid-edit branch in order to visualise the loaded navmesh.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,9 @@ if(USE_SYSTEM_TINYXML)
     endif()
 endif()
 
+# TES4
+find_package(ZLIB REQUIRED)
+
 # Platform specific
 if (WIN32)
     if(NOT MINGW)
@@ -259,9 +262,10 @@ include_directories("." ${LIBS_DIR}
     ${MYGUI_PLATFORM_INCLUDE_DIRS}
     ${OPENAL_INCLUDE_DIR}
     ${BULLET_INCLUDE_DIRS}
+    ${ZLIB_INCLUDE_DIRS}
 )
 
-link_directories(${SDL2_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} ${OGRE_LIB_DIR} ${MYGUI_LIB_DIR})
+link_directories(${SDL2_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} ${OGRE_LIB_DIR} ${MYGUI_LIB_DIR} ${ZLIB_LIB_DIR})
 
 if(MYGUI_STATIC)
    add_definitions(-DMYGUI_STATIC)
@@ -575,6 +579,7 @@ add_subdirectory (extern/shiny)
 add_subdirectory (extern/ogre-ffmpeg-videoplayer)
 add_subdirectory (extern/oics)
 add_subdirectory (extern/sdl4ogre)
+add_subdirectory (extern/esm4)
 
 # Components
 add_subdirectory (components)
