progress save - adding foreign object and converting to the use of formid's

--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -103,7 +103,7 @@ opencs_units (view/render
 opencs_units_noqt (view/render
     navigation navigation1st navigationfree navigationorbit lighting lightingday lightingnight
     lightingbright object cell terrainstorage textoverlay overlaymask overlaysystem mousestate
-    pathgridpoint foreigncell
+    pathgridpoint foreigncell foreignobject
     )
 
 opencs_units (view/foreign
