--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -42,7 +42,12 @@ opencs_units (model/foreign
 opencs_units_noqt (model/foreign
     world worldcollection region regioncollection cell cellcollection cellref refcollection
     landtexture landtexturecollection land landcollection static staticcollection
+    animobject container
     navmeshinfo navigationcollection navmesh navmeshcollection
+    )
+
+opencs_hdrs_noqt (model/foreign
+    idcollection
     )
 
 
