--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -108,7 +108,7 @@ opencs_units (view/render
 opencs_units_noqt (view/render
     navigation navigation1st navigationfree navigationorbit lighting lightingday lightingnight
     lightingbright object cell terrainstorage textoverlay overlaymask overlaysystem mousestate
-    pathgridpoint foreigncell foreignobject
+    pathgridpoint foreigncell foreignobject water sky
     )
 
 opencs_units (view/foreign
