--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -74,7 +74,7 @@ add_component_dir (esm4terrain
     )
 
 add_component_dir (misc
-    utf8stream stringops resourcehelpers
+    utf8stream stringops resourcehelpers rng
     )
 
 IF(NOT WIN32 AND NOT APPLE)
