adde ammo, clothing, door and potions, fixed (hopefully) worldspace heightmap issue, added more nif support

--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -43,7 +43,7 @@ opencs_units_noqt (model/foreign
     world worldcollection region regioncollection cell cellcollection cellref refcollection
     landtexture landtexturecollection land landcollection static staticcollection
     animobject container miscitem activator armor npc flora grass tree light cellchar charcollection
-    book furniture sound weapon
+    book furniture sound weapon potion door ammo clothing
     navmeshinfo navigationcollection navmesh navmeshcollection
     )
 
@@ -103,7 +103,7 @@ opencs_units (view/widget
 
 opencs_units (view/render
     scenewidget worldspacewidget pagedworldspacewidget unpagedworldspacewidget
-    previewwidget editmode foreignworldspacewidget
+    previewwidget editmode foreignworldspacewidget foreigninteriorwidget
     )
 
 opencs_units_noqt (view/render
