--- a/extern/esm4/CMakeLists.txt
+++ b/extern/esm4/CMakeLists.txt
@@ -27,6 +27,10 @@ set(ESM4_SOURCE_FILES
     furn.cpp
     soun.cpp
     weap.cpp
+    door.cpp
+    clot.cpp
+    alch.cpp
+    ammo.cpp
     reader.cpp
 )
 
