--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -43,7 +43,7 @@ opencs_units_noqt (model/foreign
     world worldcollection region regioncollection cell cellcollection cellref refcollection
     landtexture landtexturecollection land landcollection static staticcollection
     animobject container miscitem activator armor npc flora grass tree light cellchar charcollection
-    book furniture sound weapon potion door ammo clothing
+    book furniture sound weapon potion door ammo clothing apparatus ingredient sigilstone
     navmeshinfo navigationcollection navmesh navmeshcollection
     )
 
