--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -73,7 +73,7 @@ add_openmw_dir (mwworld
 add_openmw_dir (mwclass
     classes activator creature npc weapon armor potion apparatus book clothing container door
     ingredient creaturelevlist itemlevlist light lockpick misc probe repair static
-    foreignstatic
+    foreignactivator foreigncontainer foreignstatic
     )
 
 add_openmw_dir (mwmechanics
