--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -24,6 +24,7 @@ add_openmw_dir (mwrender
     actors objects renderinginterface localmap occlusionquery water shadows
     characterpreview globalmap ripplesimulation refraction
     terrainstorage renderconst effectmanager weaponanimation
+    foreignnpcanimation
     )
 
 add_openmw_dir (foreign
