Progress save - ragdoll implementation.  Kinda works but the physics meshes are in the wrong place, and only works if collision is turned off (!!).  A not of temporary code and memory leak.

--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -24,7 +24,7 @@ add_openmw_dir (mwrender
     actors objects renderinginterface localmap occlusionquery water shadows
     characterpreview globalmap ripplesimulation refraction
     terrainstorage renderconst effectmanager weaponanimation
-    foreignnpcanimation
+    foreignnpcanimation foreigncreatureanimation
     )
 
 add_openmw_dir (foreign
