--- a/extern/esm4/CMakeLists.txt
+++ b/extern/esm4/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#  Copyright (C) 2016, 2017 cc9cii
+#  Copyright (C) 2016-2018 cc9cii
 #
 #  This software is provided 'as-is', without any express or implied
 #  warranty.  In no event will the authors be held liable for any damages
