Move the GenOBHash implementations to a cpp file so that the hash functions can be used elsewhere.

--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -239,6 +239,7 @@ target_link_libraries(openmw-cs
     ${NIBTOGRE_LIBRARIES}
     ${MURMURHASH_LIBRARIES}
     ${STRVERSCMP_LIBRARIES}
+    ${BSAOPTHASH_LIBRARIES}
     ${Boost_SYSTEM_LIBRARY}
     ${Boost_FILESYSTEM_LIBRARY}
     ${Boost_PROGRAM_OPTIONS_LIBRARY}
