Animated doors work, at least the rendering.  A little uncertain about the hack to get delta rotations, however.

--- a/extern/nibtogre/CMakeLists.txt
+++ b/extern/nibtogre/CMakeLists.txt
@@ -58,7 +58,9 @@ set(NIBTOGRE_SOURCE_FILES
     nigeommorphercontroller.cpp
     nikeyframecontroller.cpp
     nimaterialcolorcontroller.cpp
+    niparticlesystemcontroller.cpp
     nipsysmodifierctlr.cpp
+    niuvcontroller.cpp
     niviscontroller.cpp
 
     bhkrefobject.cpp
