Progress save since character animations are (mostly) working.  Note sometimes the characters fully or half 'disappear' which seems to suggest that there may be uninitialised variables somewhere.  Really needs a good cleanup since a lot of things were hacked in.

--- a/extern/nibtogre/CMakeLists.txt
+++ b/extern/nibtogre/CMakeLists.txt
@@ -63,6 +63,8 @@ set(NIBTOGRE_SOURCE_FILES
     niuvcontroller.cpp
     niviscontroller.cpp
 
+    transformcontroller.cpp
+
     bhkrefobject.cpp
 )
 
