Mostly code shuffling to separate creation from instantiation.

--- a/extern/nibtogre/CMakeLists.txt
+++ b/extern/nibtogre/CMakeLists.txt
@@ -29,7 +29,7 @@ set(NIBTOGRE_SOURCE_FILES
     nimodelmanager.cpp
     btogreinst.cpp
     nimeshloader.cpp
-    skeletonloader.cpp
+    niskeletonloader.cpp
     btrigidbodyci.cpp
 #   btrigidbodyciloader.cpp
     btrigidbodycimanager.cpp
