Initial release for FaceGen support.  NIF specific code commented out for now.

--- a/apps/opencs/CMakeLists.txt
+++ b/apps/opencs/CMakeLists.txt
@@ -213,6 +213,7 @@ target_link_libraries(openmw-cs
     ${SHINY_LIBRARIES}
     ${ESM4_LIBRARIES}
     ${ZLIB_LIBRARY}
+    ${FGLIB_LIBRARIES}
     ${MURMURHASH_LIBRARIES}
     ${BSAOPTHASH_LIBRARIES}
     ${Boost_SYSTEM_LIBRARY}
