Added DIAL, INFO and QUST records in readiness for supporting lip sync.  Added some demo code for FaceGen emotions.  Also some code to implement Ogre's vertex pose animations but can't get that to work with sharing skeletons.

--- a/extern/esm4/CMakeLists.txt
+++ b/extern/esm4/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#  Copyright (C) 2016-2019 cc9cii
+#  Copyright (C) 2016-2020 cc9cii
 #
 #  This software is provided 'as-is', without any express or implied
 #  warranty.  In no event will the authors be held liable for any damages
@@ -81,6 +81,9 @@ set(ESM4_SOURCE_FILES
     note.cpp
     bptd.cpp
     scpt.cpp
+    dial.cpp
+    qust.cpp
+    info.cpp
     formid.cpp
     reader.cpp
 )
