Initial attempt at supporting multiple game types for MWWorld::InventoryStore.  Some of the TES3 specific logic are still present in many places, including MWMechanics/CharacterController - it also needs a game specific class or sub-class.

--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -73,6 +73,7 @@ add_openmw_dir (mwworld
     esmstore store recordcmp fallback actionrepair actionsoulgem livecellref actiondoor
     contentloader esmloader actiontrap cellreflist projectilemanager cellref mwstore
     foreignworld foreigncell foreignland foreignstore storebase actionteleportforeign
+    inventorystoretes4
     )
 
 add_openmw_dir (mwclass
