--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -73,7 +73,7 @@ add_openmw_dir (mwworld
     esmstore store recordcmp fallback actionrepair actionsoulgem livecellref actiondoor
     contentloader esmloader actiontrap cellreflist projectilemanager cellref mwstore
     foreignworld foreigncell foreignland foreignstore storebase actionteleportforeign
-    inventorystoretes4
+    inventorystoretes4 inventorystorefo3 inventorystoretes5
     )
 
 add_openmw_dir (mwclass
