Added support for loading more records found in FO3/FONV.  Just placeholders for now.

--- a/extern/esm4/CMakeLists.txt
+++ b/extern/esm4/CMakeLists.txt
@@ -87,6 +87,11 @@ set(ESM4_SOURCE_FILES
     pgrd.cpp
     pack.cpp
     lgtm.cpp
+    pgre.cpp
+    imod.cpp
+    aspc.cpp
+    pwat.cpp
+    scol.cpp
     formid.cpp
     reader.cpp
 )
