Added implementations for levelled Npc and Creature.  Added FO3 support for female headparts and FaceGen coefficients.  Weapons in TES4 are now showing any more but committing since it isn't simple to stash the changes.

--- a/apps/openmw/CMakeLists.txt
+++ b/apps/openmw/CMakeLists.txt
@@ -83,8 +83,8 @@ add_openmw_dir (mwclass
     foreignactivator foreignapparatus foreignarmor foreignbook foreignclothing foreigncontainer
     foreigndoor foreigningredient foreignlight foreignmiscitem foreignstatic foreigngrass
     foreigntree foreignflora foreignfurniture foreignweapon foreignammo foreignnpc foreigncreature
-    foreignleveledcreature foreignsoulgem foreignkey foreignpotion foreignsubspace foreignsigilstone
-    foreignleveleditem foreignnote
+    levelledcreature soulgem foreignkey foreignpotion subspace sigilstone
+    levelleditem levellednpc note
     )
 
 add_openmw_dir (mwmechanics
