Enable playing music based on the game type (TES4/FO3/FONV).  Added support for MUSE, ALOC and MSET records.

--- a/extern/esm4/CMakeLists.txt
+++ b/extern/esm4/CMakeLists.txt
@@ -92,6 +92,9 @@ set(ESM4_SOURCE_FILES
     aspc.cpp
     pwat.cpp
     scol.cpp
+    musc.cpp
+    aloc.cpp
+    mset.cpp
     formid.cpp
     reader.cpp
 )
