Incomplete but committing so that changes are not lost.  Base textures per quadrant is now rendered for simple grid based terrain.  There are probable issues with indexing that have been worked around (but need proper fixing).  Also changes to OpenCS to allow it to compile.

--- a/files/CMakeLists.txt
+++ b/files/CMakeLists.txt
@@ -32,6 +32,8 @@ set(MATERIAL_FILES
     sun.shaderset
     terrain.shader
     terrain.shaderset
+    tes4terrain.shader
+    tes4terrain.shaderset
     underwater.h
     water.mat
     water.shader
