TES5 door sound support and build TES5 skeleton models.  WARN: there are lots of workarounds for TES5 in this commit.

--- a/extern/nibtogre/CMakeLists.txt
+++ b/extern/nibtogre/CMakeLists.txt
@@ -66,6 +66,8 @@ set(NIBTOGRE_SOURCE_FILES
     transformcontroller.cpp
 
     bhkrefobject.cpp
+
+    bsobjects.cpp
 )
 
 add_library(${NIBTOGRE_LIBRARY} STATIC ${NIBTOGRE_SOURCE_FILES})
