--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,14 +199,14 @@ IF(BOOST_STATIC)
 endif()
 
 find_package(OGRE REQUIRED)
-#if (${OGRE_VERSION} VERSION_LESS "1.9")
-#    message(FATAL_ERROR "OpenMW requires Ogre 1.9 or later, please install the latest stable version from http://ogre3d.org")
-#endif()
+if (${OGRE_VERSION} VERSION_LESS "1.9")
+    message(FATAL_ERROR "OpenMW requires Ogre 1.9 or later, please install the latest stable version from http://ogre3d.org")
+endif()
 
-#find_package(MyGUI REQUIRED)
-#if (${MYGUI_VERSION} VERSION_LESS "3.2.1")
-#    message(FATAL_ERROR "OpenMW requires MyGUI 3.2.1 or later, please install the latest version from http://mygui.info")
-#endif()
+find_package(MyGUI REQUIRED)
+if (${MYGUI_VERSION} VERSION_LESS "3.2.1")
+    message(FATAL_ERROR "OpenMW requires MyGUI 3.2.1 or later, please install the latest version from http://mygui.info")
+endif()
 
 find_package(Boost REQUIRED COMPONENTS ${BOOST_COMPONENTS})
 find_package(SDL2 REQUIRED)
